k8s/vvims-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vvims-backend-deployment
  labels:
    app: vvims-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vvims-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: vvims-backend
    spec:
      containers:
        - name: ntchinda-giscard-new-vvims
          image: registry.hf.space/ntchinda-giscard-vvims-bakcend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8100
---
apiVersion: v1
kind: Service
metadata:
  name: vvims-backend-service
  labels:
    app: vvims-backend
spec:
  type: NodePort
  selector:
    app: vvims-backend
  ports:
  - protocol: TCP
    port: 80       # The port that the Service will expo se
    targetPort: 8100  # The port on the container that the Service will forward to
    nodePort: 32020  # The port on each node that will forward traffic to the Service
